# python_crash_course

./: .gitignore
python_game/: .gitignore  alien.py  alien_invasion.py  button.py  game_functions.py  scoreboard.py  settings.py  ship.py
python_game/pygame/: AUTHORS  ChangeLog  README.rst  setup.cfg  setup.py
python_game/pygame/Alien_Invasion.egg-info/: PKG-INFO  SOURCES.txt
python_game/pygame/pygame/: alien.py  game_functions.py  game_stats.py  ship.py
python_game/pygame/pygame.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
python_game/pygame/source/: conf.py  index.rst
reading_from_files/: pi_million_digits.txt
