[metadata]
name = pygame
author = pavel-malin
author-email = kurchevskijpavel@gmail.com
long_description = file: README.rst
url = https://github.com/pavel-malin/python_crash_course/tree/master/python_game
requirse-python = >= 3.7
classfiers = 
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python
