[metadata]
name = Alien Invasion
author = pavel-malin
author-email = kurchevskijpavel@gmail.com
long_description = file: README.rst
url = https://github.com/pavel-malin/python_crash_course/tree/master/python_game
requirse-python = >= 3.7
classfiers = 
    Framework :: pygame
    Development Status :: 1 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python

[options]
zip_safe = False
include_package_data = True
package_dif = 
    =pygame
packages = find:
scripts = 
    pygame/alien_invasion.py
    pygame/alien.py
    pygame/bullet.py
    pygame/button.py
    pygame/game_functions.py
    pygame/game_stats.py
    pygame/scoreboard.py
    pygame/settings.py
    pygame/ship.py
    data/images/alien.bmp
    data/images/ship.bmp

[options.package_data]
* = *.txt, *.rst
where = pygame

[options.extras_require]

[options.packages.find]

[options.data_files]

data = data/images/alien.bmp, data/images/ship.bmp

